[gd_scene load_steps=9 format=3 uid="uid://cs27w7mpr5eyo"]

[ext_resource type="FontFile" uid="uid://dcfd60ylyf7n1" path="res://fonts/monogram.ttf" id="2_g24to"]
[ext_resource type="Script" uid="uid://c1jfyhh03yaaf" path="res://scripts/text_box.gd" id="3_0ty6e"]
[ext_resource type="Script" uid="uid://q0nv6oxud3o4" path="res://scripts/crossword_cell.gd" id="4_ekyr0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CellBorder"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
border_width_left = 0
border_width_top = 1
border_width_right = 0
border_width_bottom = 0
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_a2ai8"]
font = ExtResource("2_g24to")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tkm2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a2ai8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvge7"]

[node name="CrosswordCell" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ekyr0")
highlight_active_cell_color = Color(1, 0.9019608, 0.4, 0.78431374)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_CellBorder")

[node name="NumLabel" type="Label" parent="Panel"]
z_index = 1000
layout_mode = 1
offset_left = 3.0
offset_top = -1.0
offset_right = 9.0
offset_bottom = 12.0
text = "0"
label_settings = SubResource("LabelSettings_a2ai8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StateOverlay" type="ColorRect" parent="Panel"]
z_index = 100
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="HighlightOverlay" type="ColorRect" parent="Panel"]
z_index = 200
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="TextBox" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.5019608, 0.5019608, 0.5019608, 0)
theme_override_constants/caret_width = 0
theme_override_constants/minimum_character_width = 1
theme_override_fonts/font = ExtResource("2_g24to")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_0tkm2")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_a2ai8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvge7")
alignment = 1
max_length = 1
script = ExtResource("3_0ty6e")
